--- a/OnlinePCStore/Views/Shared/_LayoutAdmin .cshtml
+++ b/OnlinePCStore/Views/Shared/_LayoutAdmin .cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - Online PC Store</title>
+    <title>@ViewBag.Title Online PC store</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
@@ -18,43 +18,34 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+
                     </button>
-                    @Html.ActionLink("Online PC Store", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                    @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li>@Html.ActionLink("Home", "Index", "Home")</li>
                         <li>@Html.ActionLink("About", "About", "Home")</li>
                         <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                        <li>@Html.ActionLink("Add Product", "AddProduct", "Product")</li>
+
                     </ul>
                     @Html.Partial("_LoginPartial")
                 </div>
-
             </div>
         </div>
-    </div>
+        </div>
+        <div class="container body-content">
+            @RenderBody()
+            <hr />
+            <footer>
+                <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            </footer>
+        </div>
 
-
-            <div class="container body-content">
-                @RenderBody()
-                <hr />
-                <footer>
-                    <!-- footer -->
-                    <div class="footer">
-                        <div class="footer-copy">
-                     
-                            <div class="container">
-                                <p><a>&copy; 2017 Online PC Store. All rights reserved </a></p>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- //footer -->
-                </footer>
-            </div>
-
-            @Scripts.Render("~/bundles/jquery")
-            @Scripts.Render("~/bundles/bootstrap")
-            @RenderSection("scripts", required: false)
+        @Scripts.Render("~/bundles/jquery")
+        @Scripts.Render("~/bundles/bootstrap")
+        @RenderSection("scripts", required: false)
 </body>
 </html>
-
